# ComfyUI-Paint3D-Nodes

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  workflow.json
Paint3D/paint3d/: dataset.py  trainer.py
Paint3D/paint3d/models/: render.py  textured_mesh.py
